added/updated the  end points needed for coding challenge
